# MIMIC-FHIR

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LSTM Architecture.md  README.md  config.yaml  docker-compose.yaml  docker-compose.yml  external_models.yaml  pyproject.toml  report_orchestrator_status_2024-12-17.md  requirements.txt  run_pipeline.sh  sandbox.ipynb  temp_brainstorm.md
.claude/commands/: update_wiki.md
Documents/Final Report/: 00_toc.md  04_architecture_design.md  04_architecture_justification.md  Final Report Canvas.canvas
Pipeline/: .claudeignore  CLAUDE.md  IMPLEMENTATION_GUIDE.md  chat.md  create_db.py  explore.ipynb  pyproject.toml
api/: database.py  main.py  schemas.py
article/: article.css  article.html  article.md
ingestion/: load_bronze.py  validate_bronze.py
models/: config.yaml  external_models.yaml
notebooks/: EDA_vital_signs.ipynb  EDA_vital_signs_3v.ipynb  data_profiling_harmonization.ipynb  duckdb_sqlmesh.ipynb  healthcare_utilization_demo.ipynb  lstm_timestep_analysis 5vs.ipynb  lstm_timestep_analysis.ipynb  patient_recommender.ipynb  pipeline_test.ipynb  pubmed_redundancy_analysis.ipynb  silver_eda.html  silver_eda.ipynb  table_exploration.ipynb
pipeline/: load_bronze.py  validate_bronze.py
reports/: 00_abstract.md  01_introduction.md  02_methodology_part1.md  03_methodology_part2.md  04_results_part1.md  05_results_part2.md  06_discussion_part1.md  07_discussion_part2.md  08_conclusion.md
specs/: silver_vitals_bp.vd.json  silver_vitals_simple.vd.json
src/: __init__.py
src/bronze/: loader.py  (+1 more)
synthea/: Dockerfile
(+107 files in other folders)
