[project]
name = "mimic-fhir-mds"
version = "0.1.0"
description = "MIMIC-FHIR Modern Data Stack"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "numpy>=1.24",
    "seaborn>=0.13.2",
    "python-dotenv>=1.2.2",
    "sqlmesh>=0.231.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
]
