[project]
name = "mimic-fhir-mds"
version = "0.1.0"
description = "MIMIC-FHIR Modern Data Stack"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "numpy>=1.24",
    "seaborn>=0.13.2",
    "python-dotenv>=1.2.2",
    "sqlmesh>=0.231.1",
    "langchain>=1.2.14",
    "langchain-core>=1.2.23",
    "langchain-text-splitters>=1.1.1",
    "langchain-chroma>=0.1.2",
    "langchain-huggingface>=1.2.1",
    "sentence-transformers>=5.3.0",
    "google-genai>=1.0",
    "metapub>=0.5",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
]
